Navigation Section added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <section>
+            <nav class="navigation-ber">
+               <div class="logo-container">
+                <img height="40px" src="images/Frame.png" alt="">
+                <h3 class="logo-title">
+                    <span class="title-design">G</span>amer
+                </h3>
+               </div>
+               <div class="menuber-container">
+                <ul class="list-container">
+                    <li class="list-item">About Us</li>
+                    <li class="list-item">Developers</li>
+                    <li class="list-item"><button class="follow-btn">Follow Us On</button></li>
+                </ul>
+               </div>
+            </nav>
+        </section>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
