Banner Section Completed with style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!-- Header Section Starts From Here -->
+
     <header>
+
+        <!-- 1st / Navigation Section Starts From Here -->
+
         <section>
             <nav class="navigation-ber">
                <div class="logo-container">
@@ -27,7 +33,34 @@
                </div>
             </nav>
         </section>
+
+        <!-- 1st / Navigation Section End Here -->
+
+        <!-- Banner Section Starts From Here -->
+
+        <section>
+            <div class="banner-container">
+                <div class="banner-content-container">
+                    <div class="banner-content">
+                        <h1 class="banner-title">PLAY LIKE THE</h1>
+                        <h1 class="banner-content-header primary-text-design">G.O.A.T.</h1>
+                        <p class="banner-description"><img src="icon/Frame.png" alt="">  1-Click instant play</p>
+                        <p class="banner-description"><img src="icon/Frame (1).png" alt="">  No Download</p>
+                        <p class="banner-description"><img src="icon/Frame (2).png" alt="">  1000s of supported online games</p>
+                    </div>
+                </div>
+                <div class="banner-image-container">
+                    <img src="images/Group 18.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Banner Section End Here -->
+
     </header>
+
+    <!-- Header Section End Here -->
+
     <main></main>
     <footer></footer>
 </body>
