Online Games Section Completed with Style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- 1st / Navigation Section End Here -->
 
-        <!-- Banner Section Starts From Here -->
+        <!-- 2nd / Banner Section Starts From Here -->
 
         <section>
             <div class="banner-container">
@@ -55,13 +55,40 @@
             </div>
         </section>
 
-        <!-- Banner Section End Here -->
+        <!-- 2nd / Banner Section End Here -->
 
     </header>
 
     <!-- Header Section End Here -->
 
-    <main></main>
+    <!-- Main Section Starts From Here -->
+
+    <main>
+        <div class="online-games-container">
+            <div class="games-content-container">
+                <h1 class="online-games-title">Online Games <span class="primary-text-design">Funny Videos</span></h1>
+                <p class="online-games-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="games-card-container">
+                <div class="card">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p class="card-description">Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p class="card-description">Breaking game records like OG</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p class="card-description">Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
