Play Instantly Section added with Style

--- a/index.html
+++ b/index.html
@@ -64,30 +64,55 @@
     <!-- Main Section Starts From Here -->
 
     <main>
-        <div class="online-games-container">
-            <div class="games-content-container">
-                <h1 class="online-games-title">Online Games <span class="primary-text-design">Funny Videos</span></h1>
-                <p class="online-games-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+
+        <!-- 1st / Online Games & Funny Videos Section Starts From Here -->
+
+        <section>
+            <div class="online-games-container">
+                <div class="games-content-container">
+                    <h1 class="online-games-title">Online Games <span class="primary-text-design">Funny Videos</span></h1>
+                    <p class="online-games-description primary-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+                </div>
+                <div class="games-card-container">
+                    <div class="card">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 5.png" alt="">
+                        <p class="card-description">Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <p class="card-description">Breaking game records like OG</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <p class="card-description">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </div>
             </div>
-            <div class="games-card-container">
-                <div class="card">
-                    <img src="images/Rectangle 4.png" alt="">
-                    <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+        </section>
+
+        <!-- 1st / Online Games & Funny Videos Section End Here -->
+
+        <!-- 2nd / No Installs Games Section Starts From Here -->
+
+        <section>
+            <div class="no-installs-game-container">
+                <div class="no-installs-games-content-container">
+                    <h1 class="no-installs-title"><span class="primary-text-design">Play Instantly,</span> No Downloads No Installs.
+                    </h1>
+                    <p class="no-installs-description primary-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
                 </div>
-                <div class="card">
-                    <img src="images/Rectangle 5.png" alt="">
-                    <p class="card-description">Did you score? #unblockedgames #school</p>
-                </div>
-                <div class="card">
-                    <img src="images/Rectangle 7.png" alt="">
-                    <p class="card-description">Breaking game records like OG</p>
-                </div>
-                <div class="card">
-                    <img src="images/Rectangle 6.png" alt="">
-                    <p class="card-description">Busted gaming on school laptop, but you are still lit.</p>
+                <div class="no-installs-games-image-container">
+                    <img src="images/Rectangle 55.png" alt="">
+                    <div class="overflow-image">
+                        <img src="images/Rectangle 66.png" alt="">
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer></footer>
 </body>
