Game Menuber Section Added with Style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Gamer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -111,6 +111,24 @@
                         <img src="images/Rectangle 66.png" alt="">
                     </div>
                 </div>
+            </div>
+        </section>
+        
+        <!-- 2nd / No Installs Games Section Starts From Here -->
+
+        <!-- 3rd / Game Section Starts From Here -->
+
+        <section>
+            <div class="game-container">
+                <button class="game"><img src="images/Rectangle 11.png" alt="">Action Games</button>
+                <button class="game"><img src="images/Rectangle 12.png" alt="">Adventure Games</button>
+                <button class="game"><img src="images/Rectangle 13.png" alt="">Arcade Games</button>
+                <button class="game"><img src="images/Rectangle 14.png" alt="">Educational Games</button>
+                <button class="game"><img src="images/Rectangle 15.png" alt="">Word Games</button>
+                <button class="game"><img src="images/Rectangle 16.png" alt="">Role Palying Games</button>
+                <button class="game"><img src="images/Rectangle 17.png" alt="">Music & Audio Games</button>
+                <button class="game"><img src="images/Rectangle 18.png" alt="">Puzzle Games</button>
+                <button class="game"><img src="images/Rectangle 19.png" alt="">Strategy Games</button>
             </div>
         </section>
     </main>
