--- a/index.html
+++ b/index.html
@@ -131,7 +131,49 @@
                 <button class="game"><img src="images/Rectangle 19.png" alt="">Strategy Games</button>
             </div>
         </section>
+
+        <!-- 3rd / Game Section End Here -->
+
     </main>
-    <footer></footer>
+    <footer>
+        
+        <!-- Footer Section Starts From Here -->
+
+        <section>
+            <div class="footer">
+                <div class="logo-container footer-logo-container">
+                    <img src="images/Frame.png" alt="">
+                    <h1 class="logo-title footer-logo-title"><span class="title-design">G</span>amer</h1>
+                </div>
+                <div class="menuber">
+                    <ul class="menu-list-container">
+                        <li>Our Story</li>
+                        <li>Games</li>
+                        <li>Web Games</li>
+                        <li>Careers</li>
+                        <li>Aupport</li>
+                        <li>My Account</li>
+                    </ul>
+                </div>
+                <div class="social-media-container">
+                    <img src="icon/twitter 1.png" alt="">
+                    <img src="icon/facebook 1.png" alt="">
+                    <img src="icon/play-button 1.png" alt="">
+                    <img src="icon/linkedin 1.png" alt="">
+                    <img src="icon/instagram 1.png" alt="">
+                    <img src="icon/apple 1.png" alt="">
+                </div>
+                <div class="security-container">
+                    <ul class="security-list">
+                        <li>Terms and Conditions</li>
+                        <li>Privacy Policy</li>
+                        <li>Cookie Policy</li>
+                        <li>Privacy Settings</li>
+                    </ul>
+                    <p class="footer-description">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
