Header Section Responsived

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="banner-image-container">
-                    <img src="images/Group 18.png" alt="">
+                    <img class="banner-img" src="images/Group 18.png" alt="">
                 </div>
             </div>
         </section>
@@ -67,7 +67,7 @@
 
         <!-- 1st / Online Games & Funny Videos Section Starts From Here -->
 
-        <section>
+        <section class="all">
             <div class="online-games-container">
                 <div class="games-content-container">
                     <h1 class="online-games-title">Online Games <span class="primary-text-design">Funny Videos</span></h1>
@@ -98,7 +98,7 @@
 
         <!-- 2nd / No Installs Games Section Starts From Here -->
 
-        <section>
+        <section class="all">
             <div class="no-installs-game-container">
                 <div class="no-installs-games-content-container">
                     <h1 class="no-installs-title"><span class="primary-text-design">Play Instantly,</span> No Downloads No Installs.
@@ -118,7 +118,7 @@
 
         <!-- 3rd / Game Section Starts From Here -->
 
-        <section>
+        <section class="all">
             <div class="game-container">
                 <button class="game"><img src="images/Rectangle 11.png" alt="">Action Games</button>
                 <button class="game"><img src="images/Rectangle 12.png" alt="">Adventure Games</button>
@@ -139,7 +139,7 @@
         
         <!-- Footer Section Starts From Here -->
 
-        <section>
+        <section class="all">
             <div class="footer">
                 <div class="logo-container footer-logo-container">
                     <img src="images/Frame.png" alt="">
