Online Games & Funny Videos Section Responsive

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!-- 1st / Online Games & Funny Videos Section Starts From Here -->
 
-        <section class="all">
+        <section>
             <div class="online-games-container">
                 <div class="games-content-container">
                     <h1 class="online-games-title">Online Games <span class="primary-text-design">Funny Videos</span></h1>
