Play Instantly Section Responsive

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <!-- 2nd / No Installs Games Section Starts From Here -->
 
-        <section class="all">
+        <section>
             <div class="no-installs-game-container">
                 <div class="no-installs-games-content-container">
                     <h1 class="no-installs-title"><span class="primary-text-design">Play Instantly,</span> No Downloads No Installs.
@@ -106,9 +106,9 @@
                     <p class="no-installs-description primary-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
                 </div>
                 <div class="no-installs-games-image-container">
-                    <img src="images/Rectangle 55.png" alt="">
+                    <img class="main-image" src="images/Rectangle 55.png" alt="">
                     <div class="overflow-image">
-                        <img src="images/Rectangle 66.png" alt="">
+                        <img class="overflow" src="images/Rectangle 66.png" alt="">
                     </div>
                 </div>
             </div>
