--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section>
             <nav class="navigation-ber">
                <div class="logo-container">
-                <img height="40px" src="images/Frame.png" alt="">
+                <img class="logo" src="images/Frame.png" alt="">
                 <h3 class="logo-title">
                     <span class="title-design">G</span>amer
                 </h3>
@@ -139,38 +139,40 @@
         
         <!-- Footer Section Starts From Here -->
 
-        <section class="all">
-            <div class="footer">
-                <div class="logo-container footer-logo-container">
-                    <img src="images/Frame.png" alt="">
-                    <h1 class="logo-title footer-logo-title"><span class="title-design">G</span>amer</h1>
-                </div>
-                <div class="menuber">
-                    <ul class="menu-list-container">
-                        <li>Our Story</li>
-                        <li>Games</li>
-                        <li>Web Games</li>
-                        <li>Careers</li>
-                        <li>Aupport</li>
-                        <li>My Account</li>
-                    </ul>
-                </div>
-                <div class="social-media-container">
-                    <img src="icon/twitter 1.png" alt="">
-                    <img src="icon/facebook 1.png" alt="">
-                    <img src="icon/play-button 1.png" alt="">
-                    <img src="icon/linkedin 1.png" alt="">
-                    <img src="icon/instagram 1.png" alt="">
-                    <img src="icon/apple 1.png" alt="">
-                </div>
-                <div class="security-container">
-                    <ul class="security-list">
-                        <li>Terms and Conditions</li>
-                        <li>Privacy Policy</li>
-                        <li>Cookie Policy</li>
-                        <li>Privacy Settings</li>
-                    </ul>
-                    <p class="footer-description">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        <section>
+            <div class="footer-container">
+                <div class="footer">
+                    <div class="logo-container footer-logo-container">
+                        <img class="logo" src="images/Frame.png" alt="">
+                        <h1 class="logo-title footer-logo-title"><span class="title-design">G</span>amer</h1>
+                    </div>
+                    <div class="menuber">
+                        <ul class="menu-list-container">
+                            <li>Our Story</li>
+                            <li>Games</li>
+                            <li>Web Games</li>
+                            <li>Careers</li>
+                            <li>Aupport</li>
+                            <li>My Account</li>
+                        </ul>
+                    </div>
+                    <div class="social-media-container">
+                        <img src="icon/twitter 1.png" alt="">
+                        <img src="icon/facebook 1.png" alt="">
+                        <img src="icon/Group 49.png" alt="">
+                        <img src="icon/linkedin 1.png" alt="">
+                        <img src="icon/instagram 1.png" alt="">
+                        <img src="icon/apple 1.png" alt="">
+                    </div>
+                    <div class="security-container">
+                        <ul class="security-list">
+                            <li>Terms and Conditions</li>
+                            <li>Privacy Policy</li>
+                            <li>Cookie Policy</li>
+                            <li>Privacy Settings</li>
+                        </ul>
+                        <p class="footer-description">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                    </div>
                 </div>
             </div>
         </section>
