Banner Section Resolved

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <!-- 1st / Navigation Section Starts From Here -->
 
         <section>
-            <nav class="navigation-ber">
+            <nav class="navigation-bar">
                <div class="logo-container">
                 <img class="logo" src="images/Frame.png" alt="">
                 <h3 class="logo-title">
                     <span class="title-design">G</span>amer
                 </h3>
                </div>
-               <div class="menuber-container">
+               <div class="menubar-container">
                 <ul class="list-container">
                     <li class="list-item">About Us</li>
                     <li class="list-item">Developers</li>
-                    <li class="list-item"><button class="follow-btn">Follow Us On</button></li>
+                    <li class="list-item"><button class="follow-btn">Follow Us On <img class="youtube" src="icon/Vector.png" alt=""><img class="tik-tok" src="icon/tik-tok 1.png" alt=""></button></li>
                 </ul>
                </div>
             </nav>
@@ -47,6 +47,10 @@
                         <p class="banner-description"><img src="icon/Frame.png" alt="">  1-Click instant play</p>
                         <p class="banner-description"><img src="icon/Frame (1).png" alt="">  No Download</p>
                         <p class="banner-description"><img src="icon/Frame (2).png" alt="">  1000s of supported online games</p>
+                        <div class="btn-container">
+                            <button class="pink-btn">SIGN IN</button>
+                            <button class="blue-btn">GO ROGUE</button>
+                        </div>
                     </div>
                 </div>
                 <div class="banner-image-container">
@@ -76,7 +80,7 @@
                 <div class="games-card-container">
                     <div class="card">
                         <img src="images/Rectangle 4.png" alt="">
-                        <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+                        <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p> 
                     </div>
                     <div class="card">
                         <img src="images/Rectangle 5.png" alt="">
@@ -146,7 +150,7 @@
                         <img class="logo" src="images/Frame.png" alt="">
                         <h1 class="logo-title footer-logo-title"><span class="title-design">G</span>amer</h1>
                     </div>
-                    <div class="menuber">
+                    <div class="menubar">
                         <ul class="menu-list-container">
                             <li>Our Story</li>
                             <li>Games</li>
