Online Sections Hover Style Added

--- a/index.html
+++ b/index.html
@@ -78,20 +78,38 @@
                     <p class="online-games-description primary-description">A Collection of Hilarious Videos to Brighten Your Day</p>
                 </div>
                 <div class="games-card-container">
-                    <div class="card">
-                        <img src="images/Rectangle 4.png" alt="">
-                        <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p> 
+                    <div>
+                        <div class="card">
+                            <img class="card-image" src="images/Rectangle 4.png" alt="">
+                            <div class="overlay">
+                                <img src="icon/play-button 1.png" alt="">
+                                <p class="overlay-description">Watch Now</p>
+                            </div>
+                            <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="images/Rectangle 5.png" alt="">
+                        <img class="card-image" src="images/Rectangle 5.png" alt="">
+                        <div class="overlay">
+                            <img src="icon/play-button 1.png" alt="">
+                            <p class="overlay-description">Watch Now</p>
+                        </div>
                         <p class="card-description">Did you score? #unblockedgames #school</p>
                     </div>
                     <div class="card">
-                        <img src="images/Rectangle 7.png" alt="">
+                        <img class="card-image" src="images/Rectangle 7.png" alt="">
+                        <div class="overlay">
+                            <img src="icon/play-button 1.png" alt="">
+                            <p class="overlay-description">Watch Now</p>
+                        </div>
                         <p class="card-description">Breaking game records like OG</p>
                     </div>
                     <div class="card">
-                        <img src="images/Rectangle 6.png" alt="">
+                        <img class="card-image" src="images/Rectangle 6.png" alt="">
+                        <div class="overlay">
+                            <img src="icon/play-button 1.png" alt="">
+                            <p class="overlay-description">Watch Now</p>
+                        </div>
                         <p class="card-description">Busted gaming on school laptop, but you are still lit.</p>
                     </div>
                 </div>
@@ -139,6 +157,9 @@
         <!-- 3rd / Game Section End Here -->
 
     </main>
+
+    <!-- Main Section End here -->
+
     <footer>
         
         <!-- Footer Section Starts From Here -->
@@ -161,12 +182,12 @@
                         </ul>
                     </div>
                     <div class="social-media-container">
-                        <img src="icon/twitter 1.png" alt="">
-                        <img src="icon/facebook 1.png" alt="">
-                        <img src="icon/Group 49.png" alt="">
-                        <img src="icon/linkedin 1.png" alt="">
-                        <img src="icon/instagram 1.png" alt="">
-                        <img src="icon/apple 1.png" alt="">
+                        <a href=""><img class="contact" src="icon/twitter 1.png" alt=""></a>
+                        <a href=""><img class="contact" src="icon/facebook 1.png" alt=""></a>
+                        <a href=""><img class="contact" src="icon/Group 49.png" alt=""></a>
+                        <a href=""><img class="contact" src="icon/linkedin 1.png" alt=""></a>
+                        <a href=""><img class="contact" src="icon/instagram 1.png" alt=""></a>
+                        <a href=""><img class="contact" src="icon/apple 1.png" alt=""></a>
                     </div>
                     <div class="security-container">
                         <ul class="security-list">
@@ -180,6 +201,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Footer Section End Here -->
     </footer>
 </body>
 </html>
