--- a/index.html
+++ b/index.html
@@ -78,20 +78,22 @@
                     <p class="online-games-description primary-description">A Collection of Hilarious Videos to Brighten Your Day</p>
                 </div>
                 <div class="games-card-container">
-                    <div>
-                        <div class="card">
-                            <img class="card-image" src="images/Rectangle 4.png" alt="">
-                            <div class="overlay">
-                                <img src="icon/play-button 1.png" alt="">
-                                <p class="overlay-description">Watch Now</p>
-                            </div>
-                            <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <div class="card">
+                         <img class="card-image" src="images/Rectangle 4.png" alt="">
+                        <div class="overlay">
+                            <img src="icon/play-button 1.png" alt="">
                         </div>
+                        <div class="overlay-title">
+                            <p class="overlay-description">Watch Now</p>
+                        </div>
+                        <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
                     </div>
                     <div class="card">
                         <img class="card-image" src="images/Rectangle 5.png" alt="">
                         <div class="overlay">
                             <img src="icon/play-button 1.png" alt="">
+                        </div>
+                        <div class="overlay-title">
                             <p class="overlay-description">Watch Now</p>
                         </div>
                         <p class="card-description">Did you score? #unblockedgames #school</p>
@@ -100,6 +102,8 @@
                         <img class="card-image" src="images/Rectangle 7.png" alt="">
                         <div class="overlay">
                             <img src="icon/play-button 1.png" alt="">
+                        </div>
+                        <div class="overlay-title">
                             <p class="overlay-description">Watch Now</p>
                         </div>
                         <p class="card-description">Breaking game records like OG</p>
@@ -108,6 +112,8 @@
                         <img class="card-image" src="images/Rectangle 6.png" alt="">
                         <div class="overlay">
                             <img src="icon/play-button 1.png" alt="">
+                        </div>
+                        <div class="overlay-title">
                             <p class="overlay-description">Watch Now</p>
                         </div>
                         <p class="card-description">Busted gaming on school laptop, but you are still lit.</p>
