We Are Gamer Section Added & Responsived for Mobile and Tablet device

--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
 
     <main>
 
+        <section>
+            <div class="we-are-gamer-container">
+                <div class="gamer-image-container">
+                    <img class="gamer-image" src="images/pngwing 4.png" alt="">
+                </div>
+                <div class="gamer-content-container">
+                    <h1 class="gamer-title primary-text-design">We are gamer</h1>
+                    <p class="gamer-description primary-description">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                    <button class="gamer-btn pink-btn">KNOW MORE</button>
+                    <p class="purpose"> Our purpose... <br><span class="purpose-design">“unleash the gamer in everyone”</span></p>
+                </div>
+            </div>
+        </section>
+
         <!-- 1st / Online Games & Funny Videos Section Starts From Here -->
 
         <section>
