--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
     <main>
 
+        <!-- 1st / We Are Gamer Section Starts From Here -->
+
         <section>
             <div class="we-are-gamer-container">
                 <div class="gamer-image-container">
@@ -83,7 +85,9 @@
             </div>
         </section>
 
-        <!-- 1st / Online Games & Funny Videos Section Starts From Here -->
+        <!-- 1st / We Are Gamer Section End Here -->
+
+        <!-- 2nd / Online Games & Funny Videos Section Starts From Here -->
 
         <section>
             <div class="online-games-container">
@@ -144,9 +148,9 @@
             </div>
         </section>
 
-        <!-- 1st / Online Games & Funny Videos Section End Here -->
+        <!-- 2nd / Online Games & Funny Videos Section End Here -->
 
-        <!-- 2nd / No Installs Games Section Starts From Here -->
+        <!-- 3rd / No Installs Games Section Starts From Here -->
 
         <section>
             <div class="no-installs-game-container">
@@ -164,9 +168,9 @@
             </div>
         </section>
         
-        <!-- 2nd / No Installs Games Section Starts From Here -->
+        <!-- 3rd / No Installs Games Section Starts From Here -->
 
-        <!-- 3rd / Game Section Starts From Here -->
+        <!-- 4th / Game Section Starts From Here -->
 
         <section>
             <div class="game-container">
@@ -182,7 +186,7 @@
             </div>
         </section>
 
-        <!-- 3rd / Game Section End Here -->
+        <!-- 4th / Game Section End Here -->
 
     </main>
 
@@ -231,6 +235,7 @@
         </section>
 
         <!-- Footer Section End Here -->
+        
     </footer>
 </body>
 </html>
